2008-02-04  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Fixed bug: htmlArea RTE calling t3lib_div::getUserObj() with an empty string
	* Fixed bug: htmlArea RTE: incorrect configuration of TYPO3HtmlParser plugin

2008-02-04  Benjamin Mack  <mack@xnos.org>

	* Fixed bug #7354: Filelist titles length was fixed to 30 characters, now uses value from user setup (Thanks to Stefano Cecere)

2008-02-04  Michael Stucki  <michael@typo3.org>

	* Fixed bug #7295: sysext/dbal/: Uninitialized variable in ->handler_getFromTableList() (Patch by Oliver Klee)
	* Added feature #2988: Enable EXPLAIN SELECT in TS admin panel

2008-02-04  Oliver Hader  <oh@inpublica.de>

	* (feature) Added feature #5242: IRRE - Storage page for child records
	* (minor) Fixed bug #7029: tslib_cObj uses deprecated function call_user_method
	* (feature) Added feature #6472: IRRE - Possibility to manipulate control items for each child records
	* (minor) Fixed bug #7371: Query generator does not accept dates in where condition
	* (tweak) Followup to #6087: Added missing labels localize.isLocalizable and localize.wasRemovedInOriginal

2008-02-03  Dmitry Dulepov  <dmitry@typo3.org>

	* MSIE fixes for #7336 (by Jeff Segars)

2008-02-03  Oliver Hader  <oh@inpublica.de>

	* (feature) Added feature #6087: IRRE - Localization of child records
		!!! Full review by a core developer before TYPO3 4.2-RC1 required  

2008-02-03  Ingmar Schlecht  <ingmar@typo3.org>

	* Followup to #7282: Username is now only linked to user setup if the module is accessible, thanks to Steffen Kamper
	* Followup to #7361: Using label tags in setup module

2008-02-03  Benjamin Mack  <mack@xnos.org>

	* Followup to #7361: Reset button has now a JS confirm question
	* Followup to #7346: opendocs top menu only is included once now
	* Feature #7346: Added "Open Documents" menu in top bar of new BE, made module optional
	* Followup to #7361: Save button was moved to bottom again